vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-6.snap
---
source: src/lexer/test.rs
expression: "lex(\"Mod\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Mod,
        },
    ],
)
