vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-7.snap
---
source: src/lexer/test.rs
expression: "lex(\"Initialize\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 10,
            },
            kind: Initialize,
        },
    ],
)
