vfpl_lexer/src/snapshots/vfpl__lexer__test__alphabetical_char_in_number.snap
---
source: src/lexer/test.rs
expression: "lex(\"12a\")"

---
Err(
    InvalidCharacter(
        Span {
            start: 2,
            end: 3,
        },
    ),
)
