vfpl_lexer/src/snapshots/vfpl__lexer__test__decimal_with_minus_and_leading_zeros.snap
---
source: src/lexer/test.rs
expression: "lex(\"-00000012.23\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 12,
            },
            kind: Float(
                -12.23,
            ),
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
