vfpl_lexer/src/snapshots/vfpl__lexer__test__minus_number.snap
---
source: src/lexer/test.rs
expression: "lex(\"-12\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Int(
                -12,
            ),
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
